# mariadb-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/mariadb_mcp/: __init__.py  server.py
